--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+<%= form_tag("/home/login", :method => "post") do %>
+<%= label_tag(:username, "User name:") %>
+<%= text_field_tag(:username) %>
+
+<%= label_tag(:password, "Password: ") %>
+<%= text_field_tag(:password) %>
+<%= submit_tag("Go!") %>  
+<% end %>
