--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<%= yield %>
+  <% if flash %>
+    <div class="flash">
+      <%= flash[:notice] %>
+      <%= flash[:error] %>
+    </div>
+  <% end %>
+
+  <div class="container well">
+    <%= yield %>
+  </div>
 
 </body>
 </html>
