--- a/app/views/room/overview.html.erb
+++ b/app/views/room/overview.html.erb
@@ -1,2 +1,6 @@
+<!-- TODO 2 column layout for table overview -->
 <h1>Room#overview</h1>
 <p>Find me in app/views/room/overview.html.erb</p>
+<div>
+  <p>currently <%= @rooms.length %> rooms online </p>
+</div>
