--- a/app/views/room/new.html.erb
+++ b/app/views/room/new.html.erb
@@ -1,2 +1,19 @@
+<!-- TODO error messages hübsch machen -->
 <h1>Room#new</h1>
 <p>Find me in app/views/room/new.html.erb</p>
+<% if @room.errors.full_messages.length >0 %>
+  <% @room.errors.full_messages.each do |message| %>
+    <%= message %>
+  <% end %>
+<% end %>
+<div class="roomForm">
+  <%= form_for @room, :url => room_create_path do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %><br>
+    <%= f.label :password %>
+    <%= f.text_field :password %><br>
+    <%= f.label "Private room" %>
+    <%= f.select(:private, [false, true]) %><br>
+    <%= f.submit %>
+  <% end %>
+</div>
