added html5 stuff added chat and user panel add basic overview for rooms TODO: integration tests

--- a/app/views/room/_roommenu.html.erb
+++ b/app/views/room/_roommenu.html.erb
@@ -1,4 +1,10 @@
-<%= link_to("new room", "/room/new") %>
-<%= link_to("overview", "/room/overview") %>
-<%= link_to("index", "/room/index") %>
-<%= link_to("logout", "/home/logout") %>
+<div class="navbar">
+  <div class="navbar-inner">
+  <ul class="nav">
+    <li> <%= link_to("overview", "/room/overview") %> </li>
+    <li> <%= link_to("create", "/room/new") %> </li>
+    <li> <%= link_to("current", "/room/index") %> </li>
+    <li> <%= link_to("logout", "/home/logout") %> </li>
+  </ul>
+</div>
+</div>
