--- a/app/views/room/index.html.erb
+++ b/app/views/room/index.html.erb
@@ -1,12 +1,32 @@
 <h1>Room#index</h1>
 <p>Find me in app/views/room/index.html.erb</p>
-<% @posts.each do |post| %>
-  <% if post.message == "joined" %>
-    <p class="join"><%= post.user.name %> joined <%= post.room.name %></p>
-  <% elsif post.message == "left" %>
-    <p class="leave"><%= post.user.name %> left <%= post.room.name %></p>
-  <% else %>
-    <p><%= post.user.name %>: <%= post.message %></p>
-  <% end %>
-<% end %>
+<div id="chatInput">
+  <div class="input-append">
+    <input class="span2" type="text" id="chattextbox">
+    <button class="btn" type="button" id="chattextbtn">Send</button>
+  </div>
+</div>
 
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div id="userlist" class="span1">
+      <ul class="nav nav-list">
+        <% @user.room.users.each do |user| %>
+          <li> <%= user.name %> </li>
+        <% end %>
+      </ul>
+    </div>
+
+    <div id="chat" class="span8">
+    <% @posts.reverse_each do |post| %>
+      <% if post.message == "joined" %>
+        <p class="join"><%= post.created_at %> <%= post.user.name %> joined <%= post.room.name %></p>
+      <% elsif post.message == "left" %>
+        <p class="leave"><%= post.created_at %> <%= post.user.name %> left <%= post.room.name %></p>
+      <% else %>
+        <p><%= post.created_at %> <%= post.user.name %>: <%= post.message %></p>
+      <% end %>
+    <% end %>
+    </div>
+  </div>
+</div>
