added handlebars for JS templating finally finished functional tests fixes and tweaks

--- a/app/views/room/_roommenu.html.erb
+++ b/app/views/room/_roommenu.html.erb
@@ -4,7 +4,7 @@
     <li> <%= link_to("overview", "/room/overview") %> </li>
     <li> <%= link_to("create", "/room/new") %> </li>
     <li> <%= link_to("current", "/room/index") %> </li>
-    <li> <%= link_to("logout", "/home/logout") %> </li>
+    <li> <%= link_to("logout", "/home/logout", :class => "onClickLeave") %> </li>
   </ul>
 </div>
 </div>
