--- a/app/views/room/new.html.erb
+++ b/app/views/room/new.html.erb
@@ -14,6 +14,6 @@
     <%= f.text_field :password %><br>
     <%= f.label "Private room" %>
     <%= f.select(:private, [false, true]) %><br>
-    <%= f.submit %>
+    <%= button_tag("Submit", {:type => "submit", :class=>"btn btn-primary onClickLeave"}) %>
   <% end %>
 </div>
